test/vm/errors/parser/trailing_comma_fn_params.ach
// Parser error: missing parameter name after comma in function definition
// Expected: error about expected identifier

fn broken(a, b, ) {
    return a + b
}
